--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "shop-productify",
   "private": true,
   "scripts": {
-    "build": "dotenv -e .env.prod remix vite:build",
+    "build": "remix vite:build",
     "dev": "shopify app dev",
     "config:link": "shopify app config link",
     "generate": "shopify app generate",
     "deploy": "shopify app deploy",
     "config:use": "shopify app config use",
     "env": "shopify app env",
-    "start": "dotenv -e .env.prod remix-serve ./build/server/index.js",
+    "start": "remix-serve ./build/server/index.js",
     "docker-start": "npm run setup && npm run start",
     "setup": "prisma generate && prisma migrate deploy",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
