--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "shopify": "shopify",
     "prisma": "prisma",
     "graphql-codegen": "graphql-codegen",
-    "vite": "vite"
+    "vite": "vite",
+    "test": ""
   },
   "type": "module",
   "engines": {
