--- a/shopify.app.shop-producitfy-prod.toml
+++ b/shopify.app.shop-producitfy-prod.toml
@@ -3,7 +3,7 @@
 client_id = "b1be4aab7a3149f285b9228e9fbc818f"
 name = "Shop Producitfy Prod"
 handle = "shop-producitfy-prod"
-application_url = "http://localhost:3000/"
+application_url = "https://shopify-app.rajatweb.dev/"
 embedded = false
 
 [build]
@@ -17,9 +17,9 @@ scopes = "read_orders,read_products,write_products"
 
 [auth]
 redirect_urls = [
-  "http://localhost:3000/auth/callback",
-  "http://localhost:3000/auth/shopify/callback",
-  "http://localhost:3000/api/auth/callback"
+  "https://shopify-app.rajatweb.dev/auth/callback",
+  "https://shopify-app.rajatweb.dev/auth/shopify/callback",
+  "https://shopify-app.rajatweb.dev/api/auth/callback"
 ]
 
 [webhooks]
